--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,11 @@
   0% {
     transform: translateY(-50%);}
   100% {
+    transform: translateY(0);}}
+  @keyframes grid {
+  0% {
+    transform: translateY(-50%);}
+  100% {
     transform: translateY(0);}}}
 
 :root {
